fix(tokens): Update density token mappings (#3292)
* fix(tokens): Update density token mappings

* fix(spacing): Update mappings to correct values

--- a/packages/design-system/ui/utilities/margin/_index.scss
+++ b/packages/design-system/ui/utilities/margin/_index.scss
@@ -132,35 +132,35 @@
 
 // Variables
 .slds-var-m-top_xxx-small {
-  margin-top: $var-spacing-xxx-small;
+  margin-top: $var-spacing-vertical-xxx-small;
 }
 
 .slds-var-m-top_xx-small {
-  margin-top: $var-spacing-xx-small;
+  margin-top: $var-spacing-vertical-xx-small;
 }
 
 .slds-var-m-top_x-small {
-  margin-top: $var-spacing-x-small;
+  margin-top: $var-spacing-vertical-x-small;
 }
 
 .slds-var-m-top_small {
-  margin-top: $var-spacing-small;
+  margin-top: $var-spacing-vertical-small;
 }
 
 .slds-var-m-top_medium {
-  margin-top: $var-spacing-medium;
+  margin-top: $var-spacing-vertical-medium;
 }
 
 .slds-var-m-top_large {
-  margin-top: $var-spacing-large;
+  margin-top: $var-spacing-vertical-large;
 }
 
 .slds-var-m-top_x-large {
-  margin-top: $var-spacing-x-large;
+  margin-top: $var-spacing-vertical-x-large;
 }
 
 .slds-var-m-top_xx-large {
-  margin-top: $var-spacing-xx-large;
+  margin-top: $var-spacing-vertical-xx-large;
 }
 
 // Right
@@ -213,35 +213,35 @@
 
 // Variable
 .slds-var-m-right_xxx-small {
-  margin-right: $var-spacing-xxx-small;
+  margin-right: $var-spacing-horizontal-xxx-small;
 }
 
 .slds-var-m-right_xx-small {
-  margin-right: $var-spacing-xx-small;
+  margin-right: $var-spacing-horizontal-xx-small;
 }
 
 .slds-var-m-right_x-small {
-  margin-right: $var-spacing-x-small;
+  margin-right: $var-spacing-horizontal-x-small;
 }
 
 .slds-var-m-right_small {
-  margin-right: $var-spacing-small;
+  margin-right: $var-spacing-horizontal-small;
 }
 
 .slds-var-m-right_medium {
-  margin-right: $var-spacing-medium;
+  margin-right: $var-spacing-horizontal-medium;
 }
 
 .slds-var-m-right_large {
-  margin-right: $var-spacing-large;
+  margin-right: $var-spacing-horizontal-large;
 }
 
 .slds-var-m-right_x-large {
-  margin-right: $var-spacing-x-large;
+  margin-right: $var-spacing-horizontal-x-large;
 }
 
 .slds-var-m-right_xx-large {
-  margin-right: $var-spacing-xx-large;
+  margin-right: $var-spacing-horizontal-xx-large;
 }
 
 // Bottom
@@ -294,35 +294,35 @@
 
 // Variable
 .slds-var-m-bottom_xxx-small {
-  margin-bottom: $var-spacing-xxx-small;
+  margin-bottom: $var-spacing-vertical-xxx-small;
 }
 
 .slds-var-m-bottom_xx-small {
-  margin-bottom: $var-spacing-xx-small;
+  margin-bottom: $var-spacing-vertical-xx-small;
 }
 
 .slds-var-m-bottom_x-small {
-  margin-bottom: $var-spacing-x-small;
+  margin-bottom: $var-spacing-vertical-x-small;
 }
 
 .slds-var-m-bottom_small {
-  margin-bottom: $var-spacing-small;
+  margin-bottom: $var-spacing-vertical-small;
 }
 
 .slds-var-m-bottom_medium {
-  margin-bottom: $var-spacing-medium;
+  margin-bottom: $var-spacing-vertical-medium;
 }
 
 .slds-var-m-bottom_large {
-  margin-bottom: $var-spacing-large;
+  margin-bottom: $var-spacing-vertical-large;
 }
 
 .slds-var-m-bottom_x-large {
-  margin-bottom: $var-spacing-x-large;
+  margin-bottom: $var-spacing-vertical-x-large;
 }
 
 .slds-var-m-bottom_xx-large {
-  margin-bottom: $var-spacing-xx-large;
+  margin-bottom: $var-spacing-vertical-xx-large;
 }
 
 // Left
@@ -376,35 +376,35 @@
 // Variable
 
 .slds-var-m-left_xxx-small {
-  margin-left: $var-spacing-xxx-small;
+  margin-left: $var-spacing-horizontal-xxx-small;
 }
 
 .slds-var-m-left_xx-small {
-  margin-left: $var-spacing-xx-small;
+  margin-left: $var-spacing-horizontal-xx-small;
 }
 
 .slds-var-m-left_x-small {
-  margin-left: $var-spacing-x-small;
+  margin-left: $var-spacing-horizontal-x-small;
 }
 
 .slds-var-m-left_small {
-  margin-left: $var-spacing-small;
+  margin-left: $var-spacing-horizontal-small;
 }
 
 .slds-var-m-left_medium {
-  margin-left: $var-spacing-medium;
+  margin-left: $var-spacing-horizontal-medium;
 }
 
 .slds-var-m-left_large {
-  margin-left: $var-spacing-large;
+  margin-left: $var-spacing-horizontal-large;
 }
 
 .slds-var-m-left_x-large {
-  margin-left: $var-spacing-x-large;
+  margin-left: $var-spacing-horizontal-x-large;
 }
 
 .slds-var-m-left_xx-large {
-  margin-left: $var-spacing-xx-large;
+  margin-left: $var-spacing-horizontal-xx-large;
 }
 
 // Horizontal
@@ -466,43 +466,43 @@
 
 // Variable
 .slds-var-m-horizontal_xxx-small {
-  margin-left: $var-spacing-xxx-small;
-  margin-right: $var-spacing-xxx-small;
+  margin-left: $var-spacing-horizontal-xxx-small;
+  margin-right: $var-spacing-horizontal-xxx-small;
 }
 
 .slds-var-m-horizontal_xx-small {
-  margin-left: $var-spacing-xx-small;
-  margin-right: $var-spacing-xx-small;
+  margin-left: $var-spacing-horizontal-xx-small;
+  margin-right: $var-spacing-horizontal-xx-small;
 }
 
 .slds-var-m-horizontal_x-small {
-  margin-left: $var-spacing-x-small;
-  margin-right: $var-spacing-x-small;
+  margin-left: $var-spacing-horizontal-x-small;
+  margin-right: $var-spacing-horizontal-x-small;
 }
 
 .slds-var-m-horizontal_small {
-  margin-left: $var-spacing-small;
-  margin-right: $var-spacing-small;
+  margin-left: $var-spacing-horizontal-small;
+  margin-right: $var-spacing-horizontal-small;
 }
 
 .slds-var-m-horizontal_medium {
-  margin-left: $var-spacing-medium;
-  margin-right: $var-spacing-medium;
+  margin-left: $var-spacing-horizontal-medium;
+  margin-right: $var-spacing-horizontal-medium;
 }
 
 .slds-var-m-horizontal_large {
-  margin-left: $var-spacing-large;
-  margin-right: $var-spacing-large;
+  margin-left: $var-spacing-horizontal-large;
+  margin-right: $var-spacing-horizontal-large;
 }
 
 .slds-var-m-horizontal_x-large {
-  margin-left: $var-spacing-x-large;
-  margin-right: $var-spacing-x-large;
+  margin-left: $var-spacing-horizontal-x-large;
+  margin-right: $var-spacing-horizontal-x-large;
 }
 
 .slds-var-m-horizontal_xx-large {
-  margin-left: $var-spacing-xx-large;
-  margin-right: $var-spacing-xx-large;
+  margin-left: $var-spacing-horizontal-xx-large;
+  margin-right: $var-spacing-horizontal-xx-large;
 }
 
 // Vertical
@@ -564,43 +564,43 @@
 
 // Variable
 .slds-var-m-vertical_xxx-small {
-  margin-top: $var-spacing-xxx-small;
-  margin-bottom: $var-spacing-xxx-small;
+  margin-top: $var-spacing-vertical-xxx-small;
+  margin-bottom: $var-spacing-vertical-xxx-small;
 }
 
 .slds-var-m-vertical_xx-small {
-  margin-top: $var-spacing-xx-small;
-  margin-bottom: $var-spacing-xx-small;
+  margin-top: $var-spacing-vertical-xx-small;
+  margin-bottom: $var-spacing-vertical-xx-small;
 }
 
 .slds-var-m-vertical_x-small {
-  margin-top: $var-spacing-x-small;
-  margin-bottom: $var-spacing-x-small;
+  margin-top: $var-spacing-vertical-x-small;
+  margin-bottom: $var-spacing-vertical-x-small;
 }
 
 .slds-var-m-vertical_small {
-  margin-top: $var-spacing-small;
-  margin-bottom: $var-spacing-small;
+  margin-top: $var-spacing-vertical-small;
+  margin-bottom: $var-spacing-vertical-small;
 }
 
 .slds-var-m-vertical_medium {
-  margin-top: $var-spacing-medium;
-  margin-bottom: $var-spacing-medium;
+  margin-top: $var-spacing-vertical-medium;
+  margin-bottom: $var-spacing-vertical-medium;
 }
 
 .slds-var-m-vertical_large {
-  margin-top: $var-spacing-large;
-  margin-bottom: $var-spacing-large;
+  margin-top: $var-spacing-vertical-large;
+  margin-bottom: $var-spacing-vertical-large;
 }
 
 .slds-var-m-vertical_x-large {
-  margin-top: $var-spacing-x-large;
-  margin-bottom: $var-spacing-x-large;
+  margin-top: $var-spacing-vertical-x-large;
+  margin-bottom: $var-spacing-vertical-x-large;
 }
 
 .slds-var-m-vertical_xx-large {
-  margin-top: $var-spacing-xx-large;
-  margin-bottom: $var-spacing-xx-large;
+  margin-top: $var-spacing-vertical-xx-large;
+  margin-bottom: $var-spacing-vertical-xx-large;
 }
 
 // Around
