--- a/packages/design-system/ui/utilities/padding/_index.scss
+++ b/packages/design-system/ui/utilities/padding/_index.scss
@@ -140,35 +140,35 @@
 
 // Variables
 .slds-var-p-top_xxx-small {
-  padding-top: $var-spacing-xxx-small;
+  padding-top: $var-spacing-vertical-xxx-small;
 }
 
 .slds-var-p-top_xx-small {
-  padding-top: $var-spacing-xx-small;
+  padding-top: $var-spacing-vertical-xx-small;
 }
 
 .slds-var-p-top_x-small {
-  padding-top: $var-spacing-x-small;
+  padding-top: $var-spacing-vertical-x-small;
 }
 
 .slds-var-p-top_small {
-  padding-top: $var-spacing-small;
+  padding-top: $var-spacing-vertical-small;
 }
 
 .slds-var-p-top_medium {
-  padding-top: $var-spacing-medium;
+  padding-top: $var-spacing-vertical-medium;
 }
 
 .slds-var-p-top_large {
-  padding-top: $var-spacing-large;
+  padding-top: $var-spacing-vertical-large;
 }
 
 .slds-var-p-top_x-large {
-  padding-top: $var-spacing-x-large;
+  padding-top: $var-spacing-vertical-x-large;
 }
 
 .slds-var-p-top_xx-large {
-  padding-top: $var-spacing-xx-large;
+  padding-top: $var-spacing-vertical-xx-large;
 }
 
 // Right
@@ -221,35 +221,35 @@
 
 // Variable
 .slds-var-p-right_xxx-small {
-  padding-right: $var-spacing-xxx-small;
+  padding-right: $var-spacing-horizontal-xxx-small;
 }
 
 .slds-var-p-right_xx-small {
-  padding-right: $var-spacing-xx-small;
+  padding-right: $var-spacing-horizontal-xx-small;
 }
 
 .slds-var-p-right_x-small {
-  padding-right: $var-spacing-x-small;
+  padding-right: $var-spacing-horizontal-x-small;
 }
 
 .slds-var-p-right_small {
-  padding-right: $var-spacing-small;
+  padding-right: $var-spacing-horizontal-small;
 }
 
 .slds-var-p-right_medium {
-  padding-right: $var-spacing-medium;
+  padding-right: $var-spacing-horizontal-medium;
 }
 
 .slds-var-p-right_large {
-  padding-right: $var-spacing-large;
+  padding-right: $var-spacing-horizontal-large;
 }
 
 .slds-var-p-right_x-large {
-  padding-right: $var-spacing-x-large;
+  padding-right: $var-spacing-horizontal-x-large;
 }
 
 .slds-var-p-right_xx-large {
-  padding-right: $var-spacing-xx-large;
+  padding-right: $var-spacing-horizontal-xx-large;
 }
 
 // Bottom
@@ -302,35 +302,35 @@
 
 // Variable
 .slds-var-p-bottom_xxx-small {
-  padding-bottom: $var-spacing-xxx-small;
+  padding-bottom: $var-spacing-vertical-xxx-small;
 }
 
 .slds-var-p-bottom_xx-small {
-  padding-bottom: $var-spacing-xx-small;
+  padding-bottom: $var-spacing-vertical-xx-small;
 }
 
 .slds-var-p-bottom_x-small {
-  padding-bottom: $var-spacing-x-small;
+  padding-bottom: $var-spacing-vertical-x-small;
 }
 
 .slds-var-p-bottom_small {
-  padding-bottom: $var-spacing-small;
+  padding-bottom: $var-spacing-vertical-small;
 }
 
 .slds-var-p-bottom_medium {
-  padding-bottom: $var-spacing-medium;
+  padding-bottom: $var-spacing-vertical-medium;
 }
 
 .slds-var-p-bottom_large {
-  padding-bottom: $var-spacing-large;
+  padding-bottom: $var-spacing-vertical-large;
 }
 
 .slds-var-p-bottom_x-large {
-  padding-bottom: $var-spacing-x-large;
+  padding-bottom: $var-spacing-vertical-x-large;
 }
 
 .slds-var-p-bottom_xx-large {
-  padding-bottom: $var-spacing-xx-large;
+  padding-bottom: $var-spacing-vertical-xx-large;
 }
 
 // Left
@@ -383,35 +383,35 @@
 
 // Variable
 .slds-var-p-left_xxx-small {
-  padding-left: $var-spacing-xxx-small;
+  padding-left: $var-spacing-horizontal-xxx-small;
 }
 
 .slds-var-p-left_xx-small {
-  padding-left: $var-spacing-xx-small;
+  padding-left: $var-spacing-horizontal-xx-small;
 }
 
 .slds-var-p-left_x-small {
-  padding-left: $var-spacing-x-small;
+  padding-left: $var-spacing-horizontal-x-small;
 }
 
 .slds-var-p-left_small {
-  padding-left: $var-spacing-small;
+  padding-left: $var-spacing-horizontal-small;
 }
 
 .slds-var-p-left_medium {
-  padding-left: $var-spacing-medium;
+  padding-left: $var-spacing-horizontal-medium;
 }
 
 .slds-var-p-left_large {
-  padding-left: $var-spacing-large;
+  padding-left: $var-spacing-horizontal-large;
 }
 
 .slds-var-p-left_x-large {
-  padding-left: $var-spacing-x-large;
+  padding-left: $var-spacing-horizontal-x-large;
 }
 
 .slds-var-p-left_xx-large {
-  padding-left: $var-spacing-xx-large;
+  padding-left: $var-spacing-horizontal-xx-large;
 }
 
 // Horizontal
@@ -473,43 +473,43 @@
 
 // Variable
 .slds-var-p-horizontal_xxx-small {
-  padding-left: $var-spacing-xxx-small;
-  padding-right: $var-spacing-xxx-small;
+  padding-left: $var-spacing-horizontal-xxx-small;
+  padding-right: $var-spacing-horizontal-xxx-small;
 }
 
 .slds-var-p-horizontal_xx-small {
-  padding-left: $var-spacing-xx-small;
-  padding-right: $var-spacing-xx-small;
+  padding-left: $var-spacing-horizontal-xx-small;
+  padding-right: $var-spacing-horizontal-xx-small;
 }
 
 .slds-var-p-horizontal_x-small {
-  padding-left: $var-spacing-x-small;
-  padding-right: $var-spacing-x-small;
+  padding-left: $var-spacing-horizontal-x-small;
+  padding-right: $var-spacing-horizontal-x-small;
 }
 
 .slds-var-p-horizontal_small {
-  padding-left: $var-spacing-small;
-  padding-right: $var-spacing-small;
+  padding-left: $var-spacing-horizontal-small;
+  padding-right: $var-spacing-horizontal-small;
 }
 
 .slds-var-p-horizontal_medium {
-  padding-left: $var-spacing-medium;
-  padding-right: $var-spacing-medium;
+  padding-left: $var-spacing-horizontal-medium;
+  padding-right: $var-spacing-horizontal-medium;
 }
 
 .slds-var-p-horizontal_large {
-  padding-left: $var-spacing-large;
-  padding-right: $var-spacing-large;
+  padding-left: $var-spacing-horizontal-large;
+  padding-right: $var-spacing-horizontal-large;
 }
 
 .slds-var-p-horizontal_x-large {
-  padding-left: $var-spacing-x-large;
-  padding-right: $var-spacing-x-large;
+  padding-left: $var-spacing-horizontal-x-large;
+  padding-right: $var-spacing-horizontal-x-large;
 }
 
 .slds-var-p-horizontal_xx-large {
-  padding-left: $var-spacing-xx-large;
-  padding-right: $var-spacing-xx-large;
+  padding-left: $var-spacing-horizontal-xx-large;
+  padding-right: $var-spacing-horizontal-xx-large;
 }
 
 // Vertical
@@ -571,43 +571,43 @@
 
 // Variable
 .slds-var-p-vertical_xxx-small {
-  padding-top: $var-spacing-xxx-small;
-  padding-bottom: $var-spacing-xxx-small;
+  padding-top: $var-spacing-vertical-xxx-small;
+  padding-bottom: $var-spacing-vertical-xxx-small;
 }
 
 .slds-var-p-vertical_xx-small {
-  padding-top: $var-spacing-xx-small;
-  padding-bottom: $var-spacing-xx-small;
+  padding-top: $var-spacing-vertical-xx-small;
+  padding-bottom: $var-spacing-vertical-xx-small;
 }
 
 .slds-var-p-vertical_x-small {
-  padding-top: $var-spacing-x-small;
-  padding-bottom: $var-spacing-x-small;
+  padding-top: $var-spacing-vertical-x-small;
+  padding-bottom: $var-spacing-vertical-x-small;
 }
 
 .slds-var-p-vertical_small {
-  padding-top: $var-spacing-small;
-  padding-bottom: $var-spacing-small;
+  padding-top: $var-spacing-vertical-small;
+  padding-bottom: $var-spacing-vertical-small;
 }
 
 .slds-var-p-vertical_medium {
-  padding-top: $var-spacing-medium;
-  padding-bottom: $var-spacing-medium;
+  padding-top: $var-spacing-vertical-medium;
+  padding-bottom: $var-spacing-vertical-medium;
 }
 
 .slds-var-p-vertical_large {
-  padding-top: $var-spacing-large;
-  padding-bottom: $var-spacing-large;
+  padding-top: $var-spacing-vertical-large;
+  padding-bottom: $var-spacing-vertical-large;
 }
 
 .slds-var-p-vertical_x-large {
-  padding-top: $var-spacing-x-large;
-  padding-bottom: $var-spacing-x-large;
+  padding-top: $var-spacing-vertical-x-large;
+  padding-bottom: $var-spacing-vertical-x-large;
 }
 
 .slds-var-p-vertical_xx-large {
-  padding-top: $var-spacing-xx-large;
-  padding-bottom: $var-spacing-xx-large;
+  padding-top: $var-spacing-vertical-xx-large;
+  padding-bottom: $var-spacing-vertical-xx-large;
 }
 
 // Around
