--- a/packages/design-system/ui/components/tabs/_doc.scss
+++ b/packages/design-system/ui/components/tabs/_doc.scss
@@ -6,7 +6,7 @@
  *
  * @base
  * @name tabs
- * @selector .slds-tabs_default
+ * @selector .slds-tabs_default, .slds-tabs-mobile__container
  * @support dev-ready
  * @category base
  * @type navigation
