--- a/packages/design-system/ui/components/page-headers/base/_index.scss
+++ b/packages/design-system/ui/components/page-headers/base/_index.scss
@@ -30,7 +30,7 @@
  * @restrict .slds-page-header h1
  */
 .slds-page-header__title {
-  font-size: $page-header-title-font-size;
+  font-size: $var-font-size-8;
   font-weight: $page-header-title-font-weight;
   line-height: $line-height-heading;
 
