feat(buttons): Add text-destructive Button modifier, text-destructive hover token
* Remove unnecessary annotations

* Add Button text-destructive modifier

* Update Button docs

* Revert "Remove unnecessary annotations"

This reverts commit e28cbb63afd1aeeb036fde3f4f3698e1cbf6b676.

# Conflicts:
#	ui/components/buttons/base/_index.scss

* Add focus state text color

* Add text-destructive hover token

* Update docs for text-destructive buttons

* Update docs

--- a/packages/design-system/ui/components/buttons/base/_index.scss
+++ b/packages/design-system/ui/components/buttons/base/_index.scss
@@ -248,6 +248,31 @@ a.slds-button--inverse:focus {
 }
 
 /**
+ * @name text-destructive
+ * @summary Creates a neutral button with red text
+ * @selector .slds-button_text-destructive
+ * @restrict .slds-button
+ * @modifier
+ * @group theme
+ */
+.slds-button_text-destructive {
+  @include button;
+  @include button-base;
+  color: $color-text-destructive;
+
+  &:focus,
+  &:hover {
+    color: $color-text-destructive-hover;
+  }
+
+  &[disabled],
+  &:disabled {
+    color: $color-text-button-default-disabled;
+    background-color: $color-background-button-default-disabled;
+  }
+}
+
+/**
  * @name success
  * @summary Creates a green button style
  * @selector .slds-button_success
@@ -334,7 +359,6 @@ a.slds-button--inverse:focus {
 
 /**
  * @summary Creates a button style for full width
- *
  * @selector .slds-button_full-width
  * @restrict .slds-button
  * @modifier
