fix(checkbox): Adjust font size for checkbox labels using type token for 13px (#3316)

--- a/packages/design-system/ui/components/checkbox/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox/base/_index.scss
@@ -62,6 +62,7 @@
   .slds-form-element__label {
     display: inline;
     vertical-align: middle;
+    font-size: $font-size-3;
   }
 
   [type="checkbox"] {
