--- a/packages/design-system/ui/components/radio-group/base/_index.scss
+++ b/packages/design-system/ui/components/radio-group/base/_index.scss
@@ -33,7 +33,7 @@
   .slds-form-element__label {
     display: inline;
     vertical-align: middle;
-    font-size: $font-size-medium;
+    font-size: $font-size-3;
   }
 
   [type="radio"] {
