feat(map): Add styles for updated markup (#3319)
* Remove extra ButtonIcon

* Add note about markup differences

* Add border removal to CSS; remove from iframe

* Remove unused components

--- a/packages/design-system/ui/components/map/base/_index.scss
+++ b/packages/design-system/ui/components/map/base/_index.scss
@@ -21,12 +21,13 @@
   }
 
   iframe {
-    height: 100%;
-    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
+    height: 100%;
+    width: 100%;
+    border: 0;
   }
 }
 
