--- a/packages/design-system/ui/components/checkbox/base/_index.scss
+++ b/packages/design-system/ui/components/checkbox/base/_index.scss
@@ -34,6 +34,7 @@
 
     .slds-form-element__label {
       margin-bottom: $spacing-xx-small;
+      font-size: $font-size-2;
     }
 
     .slds-checkbox_faux {
