feat(button-group-row): Add <ButtonGroupRow /> to provide context for a group of buttons when one would want space between each button (#3304)
* feat(button-group-row): Added button group row to provide context to a group of buttons when one would want space between each button

* fix(button-group): Tweak CSS to support button menus in button group row

* feat(button-group): Update markup and styles for row variant

--- a/packages/design-system/ui/components/button-groups/_doc.scss
+++ b/packages/design-system/ui/components/button-groups/_doc.scss
@@ -14,7 +14,7 @@
  *
  * @name button-groups
  * @base
- * @selector .slds-button-group, .slds-button-group-list
+ * @selector .slds-button-group, .slds-button-group-list, .slds-button-group-row
  * @category base
  * @type action
  * @role button
